--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.root=info
 
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+server.port=8081
